--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "postprocessing",
+	"name": "@charliehess/postprocessing",
 	"version": "6.18.0",
 	"description": "A post processing library that provides the means to implement image filter effects for three.js.",
-	"homepage": "https://github.com/vanruesc/postprocessing",
+	"homepage": "https://github.com/charliehess/postprocessing",
 	"main": "build/postprocessing.js",
 	"module": "build/postprocessing.esm.js",
 	"exports": {
@@ -31,10 +31,10 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/vanruesc/postprocessing.git"
+		"url": "https://github.com/charliehess/postprocessing.git"
 	},
 	"bugs": {
-		"url": "https://github.com/vanruesc/postprocessing/issues"
+		"url": "https://github.com/charliehess/postprocessing/issues"
 	},
 	"files": [
 		"build"
@@ -52,7 +52,6 @@
 		"test": "ava"
 	},
 	"ava": {
-		"failFast": true,
 		"files": [
 			"test/**/*.js"
 		],
